# regime-predictor-lib

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  create_project_snapshot.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
config/supervised_learning/: default_model_params.yaml  hpo_search_space.yaml  thematic_pipelines.yaml
data/db/: Dockerfile  init.sh  schema.sql  schema_master_features.sql  schema_updates_for_signals.sql  volume.dvc
notebooks/: 01_volatility_data_exploration.ipynb  02_trend_and_momentum_signals_data_exploration.ipynb  04_master_features_eda.ipynb  05_analyze_thematic_model_results.ipynb  06_hm_stability_analysis.ipynb  07_combined_thematic_model_experiments.ipynb  08_analyze_hpo_results.ipynb  09_stability_analysis.ipynb  10_ensemble_model_stability_analysis.ipynb  11_analyze_ensemble_hpo_results.ipynb
src/regime_predictor_lib/analytics/: __init__.py  column_analyzer.py
src/regime_predictor_lib/data_cleaning/: __init__.py  master_features_imputer.py
src/regime_predictor_lib/data_ingestion/: __init__.py  aaii_sentiment_ingestor.py  bdi_ingestor.py  cboe_pcr_ingestor.py  cnn_fear_greed_ingestor.py  finra_margin_ingestor.py  fred_economic_indicator_ingestor.py  gex_csv_ingestor.py  smci_dmci_json_ingestor.py
src/regime_predictor_lib/data_processing/: __init__.py  baltic_dry_index_calculator.py  credit_spread_calculator.py  dxy_calculator.py  emerging_market_equity_calculator.py  gex_calculator.py  index_breadth_calculator.py  intermarket_analyzer.py  (+9 more)
src/scripts/: 01_prepare_sp500_extended_data.py  02_compute_index_breadth.py  03_fetch_voaltility_indicators.py  04_calculate_technical_indicators.py  05_fetch_economic_indicators.py  06_ingest_aaii_sentiment.py  07_ingest_finra_margin_stats.py  08_fetch_consumer_confidence.py  09_ingest_cnn_fear_greed.py  10_prepare_raw_fred_company_bond_yield_csvs.py  11_calculate_company_bond_credit_spreads.py  12_fetch_fred_spreads.py  13_prepare_raw_fred_em_tbill_yield_csvs.py  14_calculate_em_tbill_spread.py  15_calculate_relative_strength_metrics.py  16_fetch_fred_dxy_oil_raw.py  17_ingest_bdi_raw.py  18_process_dxy_signals.py  19_process_em_equity_signals.py  20_process_oil_price_signals.py  21_process_bdi_signals.py  22_process_gex_signals.py  23_process_sentiment_confidence_indices.py  24_process_smart_money_index.py  25_process_intermarket_relationships.py  26_process_sp500_derived_indicators.py  27_train_hmm_sp500_regimes.py  28_orchestrate_master_signals.py  29_create_master_feature_table.py  30_analyze_master_features.py  31_impute_master_features.py  32_perform_stationarity_tests.py  33_apply_stationary_results.py  34_create_thematic_feature_tables.py  35_reduce_thematic_features.py  36_train_thematic_models.py  36b_refine_feature_lists_from_mda.py  38_aggregate_training_results.py  39_analyze_thematic_results.py  40_tune_thematic_models.py  (+8 more)
(+33 files in other folders)
